# gnomon

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  TROUBLESHOOTING.md
crates/gnomon/: Cargo.toml
crates/gnomon-core/: Cargo.toml
crates/gnomon-core/examples/: import_bench.rs
crates/gnomon-core/src/: benchmark.rs  browse_cache.rs  config.rs  dirs.rs  lib.rs  opportunity.rs  perf.rs  rollup.rs  sources.rs  test_helpers.rs  validation.rs
crates/gnomon-core/src/classify/: mod.rs
crates/gnomon-core/src/db/: migrations.rs  mod.rs
crates/gnomon-core/src/db/migrations/: 0001_initial.sql  0002_source_manifest.sql  0003_action_classification.sql  0004_chunk_rollups.sql  0005_import_schema_version.sql  0006_path_rollups.sql  0007_history_sources.sql  0008_skill_invocations.sql  0009_action_skill_attribution.sql  0010_import_chunk_status_probe.sql  0011_d1b_message_turn_id.sql  0011_denormalize_message_joins.sql  0012_d2b_action_message_pk.sql  0013_scan_source_cache.sql  0014_pending_chunk_rebuild.sql  0015_action_rtk_match.sql  0015_provider_aware_sources.sql  0016_shared_session_spine.sql  0017_codex_rollout_raw.sql  0018_codex_aux_sources.sql  0019_drop_imported_record_count.sql  0020_drop_record_table.sql
crates/gnomon-core/src/import/: chunk.rs  mod.rs  normalize.rs  rtk.rs  source.rs  test_fixtures.rs
crates/gnomon-core/src/opportunity/: delegation_overhead.rs  fixtures.rs  history_drag.rs  mod.rs  model_mismatch.rs  prompt_yield.rs  search_churn.rs  session_setup.rs  task_setup.rs  tool_result_bloat.rs
crates/gnomon-core/src/query/: mod.rs
crates/gnomon-core/src/vcs/: mod.rs
crates/gnomon-core/tests/: import_corpus_integration.rs
crates/gnomon-core/tests/fixtures/claude/: README.md  history.jsonl
crates/gnomon-core/tests/fixtures/claude/projects/-tmp-redacted-project-a/: session-claude-fixture-01.jsonl
crates/gnomon-core/tests/fixtures/codex/: README.md  history.jsonl  session_index.jsonl
crates/gnomon-core/tests/fixtures/codex/sessions/2026/04/18/: rollout-2026-04-18T12-00-00Z.jsonl
crates/gnomon-tui/: Cargo.toml
crates/gnomon-tui/src/: app.rs  benchmark.rs  gnomon_sunburst.rs  lib.rs  prefetch.rs  selection_lag_measurement.rs
crates/gnomon-tui/src/sunburst/: geometry.rs  mod.rs  model.rs  raster.rs  render.rs  snapshot_tests.rs
crates/gnomon-tui/src/sunburst/snapshots/: gnomon_tui__sunburst__snapshot_tests__large_render_dotfiles_selected.snap  gnomon_tui__sunburst__snapshot_tests__large_render_gnomon_selected.snap  gnomon_tui__sunburst__snapshot_tests__overlap_buggy.snap  gnomon_tui__sunburst__snapshot_tests__overlap_fixed.snap  gnomon_tui__sunburst__snapshot_tests__single_layer_no_selection_snapshot.snap  gnomon_tui__sunburst__snapshot_tests__single_layer_selected_snapshot.snap  gnomon_tui__sunburst__snapshot_tests__three_layers_nested_selection_snapshot.snap  gnomon_tui__sunburst__snapshot_tests__two_layers_no_selection_snapshot.snap  gnomon_tui__sunburst__snapshot_tests__two_layers_selection_in_layer0_snapshot.snap
crates/gnomon-web/: Cargo.toml  build.rs
crates/gnomon-web/fallback/: app.css  app.js  index.html
crates/gnomon-web/src/: main.rs
crates/gnomon-web/ui/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
crates/gnomon-web/ui/src/: App.svelte  app.css
crates/gnomon-web/ui/src/components/: SunburstChart.svelte
crates/gnomon/src/: main.rs
docs/: batched-browse.md  browse-cache-footprint.md  browse-cache.md  opportunity-stability.md  scale-validation.md  selection-lag-measurement.md  sunburst-architecture.md  v1-design.md
docs/expeditions/import-testing-parity/: coverage-matrix.md  handoff.md  log.md  plan.md  state.json
docs/specs/: 2026-04-10-import-perf-design.md  2026-04-10-import-perf-log.md  2026-04-10-import-perf-phase1-plan.md  2026-04-10-import-perf-phase2-next.md  2026-04-18-codex-integration-log.md  2026-04-18-codex-integration-plan.md  2026-04-18-import-perf-phase4-log.md  2026-04-18-import-perf-phase4-plan.md  2026-04-22-import-perf-phase5-plan.md  sunburst-snapshot-testing.md
tools/tui-shot/: README.md  package-lock.json  package.json
(+8 files in other folders)
