[workspace]
members = [
  "crates/gnomon",
  "crates/gnomon-core",
  "crates/gnomon-tui",
  "crates/gnomon-web",
]
default-members = ["crates/gnomon"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.93"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.8.8"
clap = { version = "4.6.0", features = ["derive", "env"] }
crossterm = "0.29.0"
directories = "6.0.0"
glob = "0.3.1"
insta = "1.42.1"
gix = "0.81.0"
jiff = "0.2.23"
nucleo-matcher = "0.3.1"
rayon = "1.10"
ratatui = { version = "0.30.0", features = ["crossterm"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
rusqlite_migration = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.19"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
walkdir = "2.5.0"
tempfile = "3.10.1"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread"] }
tower = { version = "0.5.2", features = ["util"] }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"

[workspace.lints.rust]
unsafe_code = "forbid"
