[package]
name = "gnomon-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
directories.workspace = true
gix.workspace = true
jiff.workspace = true
rusqlite.workspace = true
rusqlite_migration.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
