[package]
name = "gnomon-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
gnomon-core = { path = "../gnomon-core" }
jiff.workspace = true
nucleo-matcher.workspace = true
ratatui.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
insta.workspace = true
tempfile.workspace = true

[lints]
workspace = true
