[package]
name = "gnomon-web"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
gnomon-core = { path = "../gnomon-core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
tower.workspace = true

[lints]
workspace = true
