[package]
name = "gnomon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
gnomon-core = { path = "../gnomon-core" }
gnomon-tui = { path = "../gnomon-tui" }

[lints]
workspace = true

